--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
+    implementation 'com.commit451:PhotoView:1.2.4'
 }
