--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
     implementation 'com.commit451:PhotoView:1.2.4'
+    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
 }
