--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
- apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -18,6 +18,7 @@ android {
 }
 repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    mavenCentral()
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -35,4 +36,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
