--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
         <activity android:name=".Gallery_images" />
         <activity
             android:name=".Full_screen_image"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Full_department_info"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Full_department_info" />
+        <activity android:name=".Events_Details"></activity>
     </application>
 
 </manifest>
