--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
 }
