--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -29,8 +29,15 @@
             android:name=".Full_screen_image"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Full_department_info" />
-        <activity android:name=".Events_Details"></activity>
-        <activity android:name=".AfterMembershipRegistration"></activity>
+        <activity android:name=".Events_Details" />
+        <activity android:name=".AfterMembershipRegistration" />
+        <activity android:name=".Loader">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
