package name changed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.ashi.a1myapplication"
+        applicationId "com.agarwal.ashi.prodigy"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
