--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ashi.a1myapplication">
+    package="com.agarwal.ashi.prodigy">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.agarwal.ashi.prodigy.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,15 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AfterRegistration" />
-        <activity android:name=".Gallery_images" />
+        <activity android:name="com.agarwal.ashi.prodigy.AfterRegistration" />
+        <activity android:name="com.agarwal.ashi.prodigy.Gallery_images" />
         <activity
-            android:name=".Full_screen_image"
+            android:name="com.agarwal.ashi.prodigy.Full_screen_image"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Full_department_info" />
-        <activity android:name=".Events_Details" />
-        <activity android:name=".AfterMembershipRegistration" />
-        <activity android:name=".Loader"
+        <activity android:name="com.agarwal.ashi.prodigy.Full_department_info" />
+        <activity android:name="com.agarwal.ashi.prodigy.Events_Details" />
+        <activity android:name="com.agarwal.ashi.prodigy.AfterMembershipRegistration" />
+        <activity android:name="com.agarwal.ashi.prodigy.Loader"
             android:theme="@style/AppTheme.NoActionBar"
             >
             <intent-filter>
